--- a/Proyecto1_BDA/pom.xml
+++ b/Proyecto1_BDA/pom.xml
@@ -12,9 +12,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    
                 </configuration>
             </plugin>
         </plugins>
@@ -27,8 +25,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>25</maven.compiler.release>
-        <exec.mainClass>com.proyecto1_bda.Proyecto1_BDA</exec.mainClass>
+        <maven.compiler.release>21</maven.compiler.release> 
+        <exec.mainClass>com.proyectol_bda.Proyectol_BDA</exec.mainClass>
     </properties>
 </project>
